--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Firmador Web Certicámara</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     
+    <title>Firmador | Certicámara</title>
+    
+    <link rel="icon" href="https://www.certicamara.com/wp-content/uploads/2021/08/cropped-favicon-32x32.png" sizes="32x32">
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.worker.min.js"></script>
 
@@ -448,4 +451,5 @@
     </script>
 </body>
 </html>
+
 
