--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     
     <title>Firmador | Certicámara</title>
     
-    <link rel="icon" href="https://www.certicamara.com/wp-content/uploads/2021/08/cropped-favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.min.js"></script>
@@ -451,5 +451,6 @@
     </script>
 </body>
 </html>
+
 
 
