--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Firmador | Certicámara</title>
-    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+    <title>Firmador Web Certicámara</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.4.168/pdf.min.mjs" type="module"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.4.168/pdf.worker.min.mjs" type="module"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.worker.min.js"></script>
+
 </head>
 <body>
     
@@ -72,7 +72,7 @@
         <div class="settings-group" id="visible_sign_group">
             <h3>✏️ Configuración de Firma Visible</h3>
             
-            <label for="image_file">Imagen de la firma (formato jpg):</label>
+            <label for="image_file">Imagen de la firma (.png, .jpg):</label>
             <div class="file-input-container">
                 <input type="file" id="image_file" accept="image/png, image/jpeg">
                 <button type="button" id="preview-pdf-button" class="button-secondary" disabled>🔍 Previsualizar</button>
@@ -448,7 +448,3 @@
     </script>
 </body>
 </html>
-
-
-
-
